--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,18 +1,13 @@
-/* marquee */
-        @keyframes marquee {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
-        }
-        .marquee {
-            white-space: nowrap;
-            overflow: hidden;
-            display: block;
-        }
-        .marquee-content {
-            display: inline-block;
-            padding-left: 100%;
-            animation: marquee 3s linear infinite;
-        }
+/* <!-- Custom CSS for Marquee Animation  */
+
+    @keyframes marquee {
+        0% { transform: translateX(100%); }
+        100% { transform: translateX(-100%); }
+    }
+    .animate-marquee {
+        animation: marquee 15s linear infinite;
+    }
+
         /* flash icon*/
          @keyframes flash {
             0%, 50%, 100% { opacity: 1; }
